--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,6 +14,13 @@
             "email": "Invalid email provided."
         }
     },
+    "places": {
+        "notfound": {
+            "one": "Unable to find this place.",
+            "many": "Unable to find.",
+            "images": "Image not uploaded."
+        }
+    },
     "errors": {
         "unable:to:find": "Unable to find.",
         "unexpected": "Unexpected error occured."
